add images and add text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Portifólio de Cassio H. Zandonai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">Bem Vindo</a></li>
+							<li><a href="#one">Quem sou eu</a></li>
+							<li><a href="#two">O que eu faço</a></li>
+							<li><a href="#three">Contato</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,11 +34,11 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Portifólio de Ciencia de Dados</h1>
+							<p>Esse é o Portifólio de <a href="https://www.linkedin.com/in/cassio-henrique-zandonai-a4289b69/">Cassio H. Zandonai</a> focado em ciência de dados.<br  />
+							 Aqui se encontram diversos <a href="https://github.com/stars/chzandonai/lists/projetos">projetos realizados</a>.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Saiba Mais</a></li>
 							</ul>
 						</div>
 					</section>
@@ -49,10 +49,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Cientista</h2>
+									<p>Como cientista na engenharia química, realizei análises de dados e estatísticas, incluindo visualizações e modelagem de dados para entender fenômenos complexos e extrair insights valiosos, que geraram publicações em revistas científicas internacionais de alto prestigio.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="http://lattes.cnpq.br/8986715787927071" class="button">Saiba Mais</a></li>
 									</ul>
 								</div>
 							</div>
@@ -61,11 +61,11 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
+									<h2>Engenheiro Químico</h2>
+									<p>Como engenheiro químico, realizei pesquisas para otimizar processos químicos, analisar o impacto de diversas variáveis na cinética de reações e desenvolver modelos preditivos. Esse trabalho exigiu que eu coletasse e analisasse grandes conjuntos de dados, visualizasse dados para identificar tendências e padrões e projetasse experimentos para testar hipóteses. Adquiri proficiência em linguagens de programação como R, Python e MATLAB e SQL.</p>
+									<!--<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									</ul>-->
 								</div>
 							</div>
 						</section>
@@ -73,11 +73,11 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
+									<h2>Professor</h2>
+									<p>Como professor universitário, aprimorei minha capacidade de comunicar conceitos complexos de forma clara e eficaz, tanto por meio de aulas expositivas, quanto por materiais didáticos escritos. Adquiri experiência em orientar e colaborar com estudantes e colegas, desenvolvendo habilidades interpessoais e trabalho em equipe, bem como habilidades de comunicação e colaboração.</p>
+									<!--<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									</ul>-->
 								</div>
 							</div>
 						</section>
@@ -86,7 +86,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
+							<h2>O que eu faço</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="features">
 								<section>
