--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portifólio de Cassio H. Zandonai</title>
+		<title>Portfólio de Cassio H. Zandonai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -90,9 +90,9 @@
 							<p>A baixo estão alguns exemplos de alguns projetos abertos de Ciencia de Dados que realizei.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3><a href="https://github.com/stars/chzandonai/lists/projetos">Projeto 1</a></h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon solid major fas fa-headphones"></span>
+									<h3><a href="https://github.com/chzandonai/Clusterizacao-musicas">Clusterização de musicas no Spotify</a></h3>
+									<p>Projeto de clusteriação de musicas a partir do banclo de dados do Spotify, incluindo interação com a API e sujestão de musicas semelhantes..</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
