add gitgnore add churn

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Portifólio de Ciencia de Dados</h1>
-							<p>Esse é o Portifólio de <a href="https://www.linkedin.com/in/cassio-henrique-zandonai-a4289b69/">Cassio H. Zandonai</a> focado em ciência de dados.<br  />
+							<h1>Portfólio de Ciência de Dados</h1>
+							<p>Esse é o Portfólio de <a href="https://www.linkedin.com/in/cassio-henrique-zandonai-a4289b69/">Cassio H. Zandonai</a> focado em ciência de dados.<br  />
 							 Aqui se encontram diversos <a href="https://github.com/stars/chzandonai/lists/projetos">projetos realizados</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Saiba Mais</a></li>
@@ -89,16 +89,19 @@
 							<h2>O que eu faço</h2>
 							<p>A baixo estão alguns exemplos de alguns projetos abertos de Ciencia de Dados que realizei.</p>
 							<div class="features">
+								
+								<section>								
+									<span class="icon solid major fas fa-chart-line"></span>
+									<h3><a href="https://github.com/chzandonai/churn-detection">Análise e Modelagem de <em>Churn</em> de Clientes</a></h3>
+									<p>Uma empresa de telefonia tem uma fuga de clientes que levou a uma perda de R$139130 no período. Com os dados, foi construído um modelo para prever os clientes mais propensos a deixar a companhia e realizar ações de prevenção como ligações e promoções.</p>
+								</section>
+								<!--
 								<section>
 									<span class="icon solid major fas fa-headphones"></span>
 									<h3><a href="https://github.com/chzandonai/Clusterizacao-musicas">Clusterização de musicas no Spotify</a></h3>
-									<p>Projeto de clusteriação de musicas a partir do banclo de dados do Spotify, incluindo interação com a API e sujestão de musicas semelhantes..</p>
+									<p>Projeto de clusteriação de musicas a partir do banclo de dados do Spotify, incluindo interação com a API e sujestão de musicas semelhantes.</p>
 								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3><a href="https://github.com/stars/chzandonai/lists/projetos">Projeto 2</a></h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
+
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3><a href="https://github.com/stars/chzandonai/lists/projetos">Projeto 3</a></h3>
@@ -124,6 +127,9 @@
 									<h3><a href="https://github.com/stars/chzandonai/lists/projetos">Projeto 7</a>/h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
+
+								-->
+
 							</div>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
@@ -134,14 +140,14 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Entre em Contato</h2>
+							<p>Entre em contato comigo pelo e-mail: chzandonai@gmail.com, ou pelo formulário abaixo.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
-												<label for="name">Name</label>
+												<label for="name">Nome</label>
 												<input type="text" name="name" id="name" />
 											</div>
 											<div class="field half">
@@ -149,39 +155,47 @@
 												<input type="text" name="email" id="email" />
 											</div>
 											<div class="field">
-												<label for="message">Message</label>
+												<label for="message">Mensagem</label>
 												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="" class="button submit">Enviar mensagem</a></li>
 										</ul>
 									</form>
 								</section>
 								<section>
 									<ul class="contact">
+										<!--
 										<li>
 											<h3>Address</h3>
 											<span>12345 Somewhere Road #654<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
-										</li>
+										</li>	
+										-->
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">chzandonai@gmail.com</a>
 										</li>
 										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<h3>Telefone</h3>
+											<span>+55 44 98860 8255</span>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li>
+													<a href="https://www.linkedin.com/in/cassio-henrique-zandonai-a4289b69/" href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+												</li>
+												
+												<li><a href="https://github.com/chzandonai" class="icon brands fa-github"><span class="label">GitHub</span></a>
+												</li>
+												<!--
 												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												-->
 											</ul>
 										</li>
 									</ul>
