--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<p>Esse é o Portfólio de <a href="https://www.linkedin.com/in/cassio-henrique-zandonai-a4289b69/">Cassio H. Zandonai</a> focado em ciência de dados.<br  />
 							 Aqui se encontram diversos <a href="https://github.com/stars/chzandonai/lists/projetos">projetos realizados</a>.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Saiba Mais</a></li>
+								<li><a href="#one" class="button scrolly">Saiba Mais sobre mim</a></li>
 							</ul>
 						</div>
 					</section>
@@ -86,14 +86,14 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>O que eu faço</h2>
-							<p>A baixo estão alguns exemplos de alguns projetos abertos de Ciencia de Dados que realizei.</p>
+							<h2>O que eu faço.</h2>
+							<p>A baixo estão alguns exemplos de alguns projetos abertos de Ciência de Dados que realizei.</p>
 							<div class="features">
 								
 								<section>								
 									<span class="icon solid major fas fa-chart-line"></span>
-									<h3><a href="https://github.com/chzandonai/churn-detection">Análise e Modelagem de <em>Churn</em> de Clientes</a></h3>
-									<p>Uma empresa de telefonia tem uma fuga de clientes que levou a uma perda de R$139130 no período. Com os dados, foi construído um modelo para prever os clientes mais propensos a deixar a companhia e realizar ações de prevenção como ligações e promoções.</p>
+									<h3><a href="churn.html">Análise e Modelagem de <em>Churn</em> de Clientes</a></h3>
+									<p>Uma empresa de telefonia tem uma fuga de clientes que levou a uma perda de R$ 139.130,00 no período. Com os dados, foi construído um modelo para prever os clientes mais propensos a deixar a companhia e realizar ações de prevenção como ligações e promoções.</p>
 								</section>
 								<!--
 								<section>
