add churn to index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2>Cientista</h2>
 									<p>Como cientista na engenharia química, realizei análises de dados e estatísticas, incluindo visualizações e modelagem de dados para entender fenômenos complexos e extrair insights valiosos, que geraram publicações em revistas científicas internacionais de alto prestigio.</p>
 									<ul class="actions">
-										<li><a href="http://lattes.cnpq.br/8986715787927071" class="button">Saiba Mais</a></li>
+										<li><a href="http://lattes.cnpq.br/8986715787927071" class="button">Saiba mais na plataforma Lattes do CNPQ</a></li>
 									</ul>
 								</div>
 							</div>
@@ -93,7 +93,7 @@
 								<section>								
 									<span class="icon solid major fas fa-chart-line"></span>
 									<h3><a href="churn.html">Análise e Modelagem de <em>Churn</em> de Clientes</a></h3>
-									<p>Uma empresa de telefonia tem uma fuga de clientes que levou a uma perda de R$ 139.130,00 no período. Com os dados, foi construído um modelo para prever os clientes mais propensos a deixar a companhia e realizar ações de prevenção como ligações e promoções.</p>
+									<p><a href="churn.html">Uma empresa de telefonia tem uma fuga de clientes que levou a uma perda de R$139.130,00 no período. Com os dados, foi construído um modelo para prever os clientes mais propensos a deixar a companhia e realizar ações de prevenção como ligações e promoções.</a></p>
 								</section>
 								<!--
 								<section>
@@ -132,7 +132,7 @@
 
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="https://github.com/stars/chzandonai/lists/projetos" class="button">Saiba mais no GitHub</a></li>
 							</ul>
 						</div>
 					</section>
