--- a/churn.html
+++ b/churn.html
@@ -21,9 +21,9 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="churn.html" class="active">Churn</a></li>
-						<!--
-						<li><a href="elements.html">Elements</a></li>							
-						-->						
+						
+						<li><a href="churnEN.html">EN</a></li>							
+											
 					</ul>
 				</nav>
 			</header>
@@ -54,7 +54,7 @@
 							<h2>Aplicação de modelo de Machine Learning</h2>
 							A lista de algoritmos classificadores de Machine Learning foi testada e aquele que apresentou melhor desempenho foi selecionado para ser utilizado em previsões futuras.
 							<ul>
-								<li>O modelo escolhido foi o Gradient Boost.</li>
+								<li>O modelo escolhido foi o Gradient Boost com 50 estimadores de profundidade 3. O modelo foi escolhido por test_split e os hiperparâmetros tunados por GridSearchCV.</li>
 							</ul>
 							<h2>Performance do Modelo de Machine Learning</h2>
 							<table>
