--- a/churnEN.html
+++ b/churnEN.html
@@ -19,7 +19,7 @@
 				<a href="index.html" class="title">Portfolio</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="indexEN.html">Home</a></li>
 						<li><a href="churnEN.html" class="active">Churn</a></li>
 						
 						<li><a href="churn.html">PT-BR</a></li>							
