--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<li><a href="index.html" class="active">Home</a></li>
 					<li><a href="churn.html">Churn</a></li>
 					
-					<li><a href="indexEN.html">PT-BR</a></li>							
+					<li><a href="indexEN.html">EN</a></li>							
 										
 				</ul>
 			</nav>
