--- a/indexEN.html
+++ b/indexEN.html
@@ -66,7 +66,7 @@
 									<h2>Scientist</h2>
 									<p>As a scientist in chemical engineering, I performed data analysis and statistics, including visualizations and data modeling to understand complex phenomena and extract valuable insights, which generated publications in highly prestigious international scientific journals.</p>
 									<ul class="actions">
-										<li><a href="http://lattes.cnpq.br/8986715787927071" class="button">Saiba mais na plataforma Lattes</a></li>
+										<li><a href="http://lattes.cnpq.br/8986715787927071" class="button">Learn more on the Lattes platform</a></li>
 									</ul>
 								</div>
 							</div>
