--- a/indexEN.html
+++ b/indexEN.html
@@ -109,7 +109,7 @@
 									<h3><a href="churn.html">Customer <em>Churn</em> Analysis and Modeling</a></h3>
 <p><a href="churn.html">A internet/phone company has a customer drain that led to a loss of R$139,130.00 in the period. With the data, a model was built to predict the customers most likely to leave the company and carry out preventive actions such as calls and promotions.</a></p>
 <ul class="actions">
-<li><a href="churn.html" class="button">Learn more about Churn</a></li>
+<li><a href="churnEN.html" class="button">Learn more about Churn</a></li>
 </ul>
 								</section>
 								<!--
